remove unneeded svg wiidth to fix mobile wrap

--- a/cfgov/unprocessed/css/organisms/mega-menu.less
+++ b/cfgov/unprocessed/css/organisms/mega-menu.less
@@ -435,7 +435,6 @@ body {
         display: inline;
         color: @pacific;
         margin-right: 10px;
-        width: 100%;
       }
     }
   }
